<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Поле ввода -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/text"
        app:layout_constraintBottom_toTopOf="@+id/copyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Кнопки буфера обмена -->
    <ImageButton
        android:id="@+id/copyButton"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/copy_text"
        android:src="@drawable/ic_content_copy_24"
        app:layout_constraintEnd_toStartOf="@+id/pasteButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

    <!-- Основные кнопки -->
    <ImageButton
        android:id="@+id/pasteButton"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/past_text"
        android:src="@drawable/ic_content_paste_24"
        app:layout_constraintEnd_toStartOf="@+id/clearButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/copyButton"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

    <ImageButton
        android:id="@+id/clearButton"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/past_text"
        android:src="@drawable/ic_clear_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/pasteButton"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

    <Button
        android:id="@+id/extractCodeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/extract_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/shareButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copyButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/share_by_file"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/extractCodeButton"
        app:layout_constraintTop_toBottomOf="@id/copyButton" />

</androidx.constraintlayout.widget.ConstraintLayout>